[gd_scene load_steps=4 format=2]

[ext_resource path="res://UI/RichTextLabel Extended/RichTextLabelExtended.tscn" type="PackedScene" id=1]
[ext_resource path="res://UI/Item Menu Item/ItemMenuItem.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 0 )
draw_center = false
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 0 )

[node name="ItemMenuItem" type="PanelContainer"]
margin_right = 54.0
margin_bottom = 38.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )

[node name="ItemMenuItemContainer" type="HBoxContainer" parent="."]
margin_left = 1.0
margin_top = 1.0
margin_right = 53.0
margin_bottom = 37.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CheckAndNameContainer" type="HBoxContainer" parent="ItemMenuItemContainer"]
margin_right = 28.0
margin_bottom = 36.0
mouse_filter = 2
size_flags_horizontal = 3

[node name="Check" type="CheckBox" parent="ItemMenuItemContainer/CheckAndNameContainer"]
margin_right = 24.0
margin_bottom = 36.0
mouse_filter = 2

[node name="Name" parent="ItemMenuItemContainer/CheckAndNameContainer" instance=ExtResource( 1 )]
margin_left = 28.0
margin_top = 10.0
margin_right = 28.0
margin_bottom = 25.0
mouse_filter = 2

[node name="Piety" parent="ItemMenuItemContainer" instance=ExtResource( 1 )]
margin_left = 32.0
margin_top = 10.0
margin_right = 36.0
margin_bottom = 25.0
mouse_filter = 2

[node name="Enchantment" parent="ItemMenuItemContainer" instance=ExtResource( 1 )]
margin_left = 40.0
margin_top = 10.0
margin_right = 44.0
margin_bottom = 25.0
mouse_filter = 2

[node name="Amount" parent="ItemMenuItemContainer" instance=ExtResource( 1 )]
margin_left = 48.0
margin_top = 10.0
margin_right = 52.0
margin_bottom = 25.0
mouse_filter = 2

[connection signal="mouse_entered" from="." to="." method="_on_ItemMenuItem_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_ItemMenuItem_mouse_exited"]
